Changes to be committed: 	modified:   home-page.html 	modified:   styles-home.css

--- a/home-page.html
+++ b/home-page.html
@@ -98,13 +98,13 @@
       </div>
       <div class="container">
           <div class="row">
-              <!-- Primera columna: Información de contacto -->
+              <!-- Información de contacto -->
               <div class="col-md-4 footer-section">
                   <h3>Información de Contacto</h3>
                   <p>Dirección: Calle Principal, Ciudad</p>
                   <p>Teléfono: +1234567890</p>
                   <p>Correo Electrónico: info@ecomedic.com</p>
-                  <!-- Espacio para la sección de redes sociales -->
+                  <!-- Redes sociales -->
                   <br>
                   <div class="social-links">
                     <h3>¡Síguenos en nuestras redes sociales!</h3>
@@ -115,11 +115,10 @@
                   </div>
               </div>
 
-              <!-- Segunda columna: Formulario de contacto -->
+              <!-- Formulario de contacto -->
               <div class="col-md-4 footer-section">
                   <h3>Formulario de Contacto</h3>
                   <div class="contact-form">
-                      <!-- Agrega aquí tu formulario de contacto personalizado -->
                       <form>
                         <p>Ingresa tu nombre completo: <input type="text"  name="nombrecompleto"></p>
 
@@ -136,13 +135,11 @@
                   </div>
               </div>
 
-              <!-- Tercera columna: Mapa interactivo -->
+              <!--Mapa-->
               <div class="col-md-4 footer-section">
-                  <h3>Ubicación en el Mapa</h3>
+                  <h3>¡Vísitanos!</h3>
                   <div class="map">
-                      <!-- Agrega aquí tu mapa interactivo de Google Maps -->
-                      <!-- Puedes usar el código de inserción proporcionado por Google Maps -->
-                  </div>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.0119355888573!2d-90.03555582485161!3d13.778153686616466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85881db3d19be3c7%3A0x928941344adc4ec0!2sECOMEDIC%20%7C%20Cl%C3%ADnica%20de%20Especialidades%20M%C3%A9dicas!5e0!3m2!1ses!2ssv!4v1694463256809!5m2!1ses!2ssv" width="800" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                  </div>
               </div>
           </div>
       </div>
