--- a/home-page.html
+++ b/home-page.html
@@ -101,9 +101,10 @@
               <!-- Información de contacto -->
               <div class="col-md-4 footer-section">
                   <h3>Información de Contacto</h3>
-                  <p>Dirección: Calle Principal, Ciudad</p>
-                  <p>Teléfono: +1234567890</p>
-                  <p>Correo Electrónico: info@ecomedic.com</p>
+                  <p>Dirección: San Salvador, San Salvador</p>
+                  <p>Teléfono: +503 7777-7777</p>
+                  <p>Correo Electrónico: ecomedic@gmail.com</p>
+                  <p>Agenda tu cita dándo click aquí</p>
                   <!-- Redes sociales -->
                   <br>
                   <div class="social-links">
