--- a/home-page.html
+++ b/home-page.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Acerca de nosotros</a>
+              <a class="nav-link" href="#about">Acerca de nosotros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Servicios</a>
@@ -66,34 +66,163 @@
 
     <main class="d-flex container">
       <div class="row">
-      <div class="container-left col-md-6">
-        <h1>
-          Bienvenido a la clinica 'ECOMEDY' donde contamos con los mejores
-          expertos
-        </h1>
+        <div class="container-left col-md-6">
+          <h1>
+            Bienvenido a la clinica 'ECOMEDY' donde contamos con los mejores
+            expertos
+          </h1>
 
-        <div class="">
-          <p class="mt-5">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia,
-            veritatis perspiciatis quis pariatur labore quod, ipsum officia
-            dolore commodi maiores nobis ul
-          </p>
+          <div class="">
+            <p class="mt-5">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Mollitia, veritatis perspiciatis quis pariatur labore quod, ipsum
+              officia dolore commodi maiores nobis ul
+            </p>
 
-          <button class="btn-main">Agendar consulta</button>
+            <button class="btn-main">Agendar consulta</button>
+          </div>
+        </div>
+
+        <div class="container-right col-md-6">
+          <img src="/Assets/img/Doctor-corazon.png" alt="" />
         </div>
       </div>
-
-      <div class="container-right col-md-6">
-        <img src="/Assets/img/Doctor-corazon.png" alt="" />
-      </div>
-    </div> 
     </main>
     <!--Jose Luis section FIN-->
+    <!--Diego section INICIO-->
 
+    <h1 id="about" class="text-center border-top 1px solid #ccc pt-5 pb-4">
+      Conoce más de nosotros
+    </h1>
+    <div class="about container">
+      <div class="row pb-4">
+        <div class="col-md-4">
+          <img class="image" src="./Assets/img/Ultrasound-img3.jpg" alt="" />
+        </div>
+        <div class="col-md-4">
+          <img class="image" src="./Assets/img/Ultrasound-img2.jpg" alt="" />
+        </div>
+        <div class="text-center col-4 pe-5">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
+            facilis illum ad doloremque, incidunt vitae dolor culpa adipisci
+            placeat quaerat tempore necessitatibus pariatur quas quisquam
+            voluptatum cumque saepe aut aliquam! <br />
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit Eligendi
+            officia dolorem, odit vel iure unde minima. Aut repellat amet ut
+            asperiores enim voluptates dolor rerum minima quos! Quibusdam,
+            maxime possimus?<br />
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque,
+            dolor distinctio! Dignissimos adipisci ad omnis expedita neque
+            reiciendis similique perferendis, illum quo fuga nulla ab, autem
+            temporibus. Corporis, nihil dicta! lorem
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="text-center row pt-4 pb-4">
+        <!-- <div class="col-md-3">
+          <img class="image" src="./Assets/img/Ultrasound-img3.jpg" alt="" />
+        </div> -->
+        <div class="col-4">
+          <h2>Misión</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            sit inventore quis, impedit pariatur quibusdam perspiciatis ullam
+            magni rem, nobis ipsum. Tenetur, dolorem! Aut veniam nesciunt ad
+            laudantium autem hic? Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit. Odio perferendis, voluptatibus vel quod sunt, vero
+            enim dolorum nesciunt ea minus saepe nulla quos deserunt provident
+          </p>
+        </div>
+        <div class="col-4">
+          <h2>Visión</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            sit inventore quis, impedit pariatur quibusdam perspiciatis ullam
+            magni rem, nobis ipsum. Tenetur, dolorem! Aut veniam nesciunt ad
+            laudantium autem hic? Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit. Odio perferendis, voluptatibus vel quod sunt, vero
+            enim dolorum nesciunt ea minus saepe nulla quos deserunt provident
+          </p>
+        </div>
+        <div class="col-4">
+          <h2>Valores</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            sit inventore quis, impedit pariatur quibusdam perspiciatis ullam
+            magni rem, nobis ipsum. Tenetur, dolorem! Aut veniam nesciunt ad
+            laudantium autem hic? Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit. Odio perferendis, voluptatibus vel quod sunt, vero
+            enim dolorum nesciunt ea minus saepe nulla quos deserunt provident
+          </p>
+        </div>
+      </div>
+      <h2 class="text-center pt-5">Nuestros profesionales</h2>
+      <div class="row justify-content-around">
+        <div class="card mt-5 ms-3" style="width: 18rem">
+          <img
+            src="./Assets/img/doctor-dummy-image.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <p class="card-text">
+              <strong>Dr. Juan Lopez</strong> <br />Radiologo especialista en
+              imagenología y diagnostico temprano.
+            </p>
+          </div>
+        </div>
+        <div class="card mt-5 ms-3" style="width: 18rem">
+          <img
+            src="./Assets/img/doctor-dummy-image.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <p class="card-text">
+              <strong>Dr. Juan Lopez</strong> <br />Radiologo especialista en
+              imagenología y diagnostico temprano.
+            </p>
+          </div>
+        </div>
+        <div class="card mt-5 ms-3" style="width: 18rem">
+          <img
+            src="./Assets/img/doctor-dummy-image.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <p class="card-text">
+              <strong>Dr. Juan Lopez</strong> <br />Radiologo especialista en
+              imagenología y diagnostico temprano.
+            </p>
+          </div>
+        </div>
+        <div class="card mt-5 ms-3" style="width: 18rem">
+          <img
+            src="./Assets/img/doctor-dummy-image.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <p class="card-text">
+              <strong>Dr. Juan Lopez</strong> <br />Radiologo especialista en
+              imagenología y diagnostico temprano.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- </div> -->
+
+    <!--Diego section FIN-->
 
     <!--Apartir de aqui creen sus secciones y eliminen este comentario-->
 
-    <!--EFECTO DEL HEADER NO TOCAR--><script src="JavaScript/Header.js"></script>
+    <!--EFECTO DEL HEADER NO TOCAR-->
+    <script src="JavaScript/Header.js"></script>
     <!--BOOTSTRAP BUNDLE NO TOCAR-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
