Un ultimo cambio en la seccion ABOUT US

--- a/home-page.html
+++ b/home-page.html
@@ -104,26 +104,25 @@
         </div>
         <div class="text-center col-4 pe-5">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-            facilis illum ad doloremque, incidunt vitae dolor culpa adipisci
-            placeat quaerat tempore necessitatibus pariatur quas quisquam
-            voluptatum cumque saepe aut aliquam! <br />
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit Eligendi
-            officia dolorem, odit vel iure unde minima. Aut repellat amet ut
-            asperiores enim voluptates dolor rerum minima quos! Quibusdam,
-            maxime possimus?<br />
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque,
-            dolor distinctio! Dignissimos adipisci ad omnis expedita neque
-            reiciendis similique perferendis, illum quo fuga nulla ab, autem
-            temporibus. Corporis, nihil dicta! lorem
+            Ecomedi nació en el corazón de una familia. Somos un equipo de 4
+            personas que trabajamos de manera estratégica, aportando cada uno un
+            rol importante y complementario. Nuestra fuerza proviene de la
+            diversidad de habilidades y experiencias que cada miembro de nuestra
+            familia aporta a la clínica. <br />Más allá de ofrecer servicios
+            médicos, buscamos brindar una atención cálida y amable a cada
+            persona que entra por nuestras puertas, entendemos que cada persona
+            es única, por lo que adaptamos nuestros tratamientos para satisfacer
+            las necesidades individuales. <br />En el centro de todo lo que
+            hacemos, se encuentra nuestro compromiso de brindar diagnósticos
+            confiables y atención inmediata, por lo que no requerimos citas
+            previas. <br />Contamos con una ubicación estratégica en una zona
+            reconocida, buscando la seguridad y bienestar de cada uno de
+            nuestros pacientes.
           </p>
         </div>
       </div>
       <hr />
       <div class="text-center row pt-4 pb-4">
-        <!-- <div class="col-md-3">
-          <img class="image" src="./Assets/img/Ultrasound-img3.jpg" alt="" />
-        </div> -->
         <div class="col-4">
           <h2>Misión</h2>
           <p>
