Ajustes a la responsividad del texto de about us

--- a/home-page.html
+++ b/home-page.html
@@ -102,7 +102,7 @@
         <div class="col-md-4">
           <img class="image" src="./Assets/img/Ultrasound-img2.jpg" alt="" />
         </div>
-        <div class="text-center col-4 pe-5">
+        <div class="text-center col-xxl-4 pe-5">
           <p>
             Ecomedi nació en el corazón de una familia. Somos un equipo de 4
             personas que trabajamos de manera estratégica, aportando cada uno un
@@ -123,7 +123,7 @@
       </div>
       <hr />
       <div class="text-center row pt-4 pb-4">
-        <div class="col-4">
+        <div class="col-lg-4">
           <h2>Misión</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
@@ -134,7 +134,7 @@
             enim dolorum nesciunt ea minus saepe nulla quos deserunt provident
           </p>
         </div>
-        <div class="col-4">
+        <div class="col-lg-4">
           <h2>Visión</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
@@ -145,7 +145,7 @@
             enim dolorum nesciunt ea minus saepe nulla quos deserunt provident
           </p>
         </div>
-        <div class="col-4">
+        <div class="col-lg-4">
           <h2>Valores</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
@@ -158,7 +158,7 @@
         </div>
       </div>
       <h2 class="text-center pt-5">Nuestros profesionales</h2>
-      <div class="row justify-content-around">
+      <div class="row justify-content-around pb-5">
         <div class="card mt-5 ms-3" style="width: 18rem">
           <img
             src="./Assets/img/doctor-dummy-image.jpg"
