--- a/home-page.html
+++ b/home-page.html
@@ -215,6 +215,87 @@
     </div>
 
     <!--Diego section FIN-->
+    <!--Roberto Section Inicio-->
+	<div id="services" class="services-box">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="title-box">
+						<h2>Servicios</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="owl-carousel owl-theme">
+						<div class="item">
+							<div class="serviceBox">
+								<div class="service-icon"><ion-icon name="woman-outline" aria-hidden="true"></ion-icon></i></div>
+								<h3 class="title">Ultrasonografía</h3>
+								<p class="description">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consequuntur.
+								</p>
+								<a href="#" class="new-btn-d br-2">Read More</a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="serviceBox">
+								<div class="service-icon"><ion-icon name="egg-outline" aria-hidden="true"></ion-icon></div>
+								<h3 class="title">Mamografía</h3>
+								<p class="description">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consequuntur.
+								</p>
+								<a href="#" class="new-btn-d br-2">Read More</a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="serviceBox">
+								<div class="service-icon"><ion-icon name="accessibility-outline" aria-hidden="true"></ion-icon></div>
+								<h3 class="title">Sueroterapia</h3>
+								<p class="description">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consequuntur.
+								</p>
+								<a href="#" class="new-btn-d br-2">Read More</a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="serviceBox">
+								<div class="service-icon"><ion-icon name="heart-sharp"" aria-hidden="true"></ion-icon></div>
+								<h3 class="title">Lorem ipsum dolor</h3>
+								<p class="description">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consequuntur.
+								</p>
+								<a href="#" class="new-btn-d br-2">Read More</a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="serviceBox">
+								<div class="service-icon"><ion-icon name="happy-outline"" aria-hidden="true"></ion-icon></div>
+								<h3 class="title">Lorem ipsum dolor</h3>
+								<p class="description">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consequuntur.
+								</p>
+								<a href="#" class="new-btn-d br-2">Read More</a>
+							</div>
+						</div>
+						<div class="item"> 
+							<div class="serviceBox">
+								<div class="service-icon"><ion-icon name="female" aria-hidden="true"></ion-icon></div>
+								<h3 class="title">Lorem ipsum dolor</h3>
+								<p class="description">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consequuntur.
+								</p>
+								<a href="#" class="new-btn-d br-2">Read More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>			
+		</div>
+	</div>
+    <!--Roberto Section FIN-->
     <!--Juan David section-->
     <div class="container-blogs">
       <div class="p-4 p-md-5 mb-4 text-white rounded dark-blue">
@@ -335,10 +416,106 @@
         </div>
       </div>
     </div>
-
+    
     <!--Juan David section FIN-->
         <!--Roberto Marroquin section Inicio-->
+        <div class="container">
+          <div class="accordion d-flex justify-content-center align-items-center height" id="accordionExample">
+            <div class="p-3">  
+              <h2 class="text-center">Testimonios </h2>
+              <p class="text-center">¡Nuestros pacientes hablan sobre nuestro trabajo! Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae.</p>
+            </div>             
+              <div class="row">     
+                  <div class="col-md-6">   
+                      <ul class="testimonial-list">
+                        <li>
+                          <div class="card p-3" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                             <div class="d-flex flex-row align-items-center">
+                               <img src="Assets/img/person2.png" width="50" class="rounded-circle">     
+                               <div class="d-flex flex-column ml-2">     
+                                 <span class="font-weight-normal">Carmencita Salinas</span>
+                                 <span>Tratamiento: Lipoescultura</span>                                 
+                               </div>                               
+                             </div>                             
+                           </div>   
+                        </li>
+                        <li>
+                         <div class="card p-3" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                             <div class="d-flex flex-row align-items-center">
+                               <img src="Assets/img/Doctor-corazon.png" width="50" class="rounded-circle">
+                               <div class="d-flex flex-column ml-2">
+                                 <span class="font-weight-normal">John Reeves</span>
+                                 <span>Tratamiento: Lorem</span>
+                               </div>
+                             </div>
+                           </div> 
+                        </li>
+                        <li>
+                         <div class="card p-3" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                             <div class="d-flex flex-row align-items-center">
+                               <img src="Assets/img/person.png" width="50" class="rounded-circle">
+                               <div class="d-flex flex-column ml-2">
+                                 <span class="font-weight-normal">Luke Harper</span>
+                                 <span>Tratamiento: Lorem</span>
+                               </div>
+                             </div>
+                           </div> 
+                        </li>
+                      </ul>
+                      </div>
+                  </div>
+                  <div class="col-md-6">
+                   <div class="p-3 testimonials-margin">
+                      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                          <div class="card-body">
+                              <h4>Fue una gran experiencia</h4>
+                              <div class="ratings">
+                               <i class="fa fa-star">★</i>
+                               <i class="fa fa-star">★</i>
+                               <i class="fa fa-star">★</i>
+                              </div>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                          </div>
+                      </div>
+                      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                          <div class="card-body">
+                              <h4>Gracias por ayudarme</h4>
+                              <div class="ratings">
+                               <i class="fa fa-star">★</i>
+                               <i class="fa fa-star">★</i>
+                               <i class="fa fa-star">★</i>
+                               <i class="fa fa-star">★</i>
+                               <i class="fa fa-star">★</i>
+                              </div>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                          </div>
+                      </div>
+                      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                          <div class="card-body">
+                              <h4>Estoy muy contento con los resultados</h4>
+                              <div class="ratings">
+                               <i class="fa fa-star">★</i>
+                               <i class="fa fa-star">★</i>
+                               <i class="fa fa-star">★</i>
+                               <i class="fa fa-star">★</i>
+                              </div>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                          </div>
+                      </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+    <br>
     <footer>
+      <br>
+      <div class="waves">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <div class="wave" id="wave4"></div>
+      </div>
       <div class="logo-container">
         <img src="/Assets/img/Favicon.png" alt="logo-clinica-ecomedi" width="100" height="100" aling="text-center"/>
       </div>
@@ -347,18 +524,18 @@
               <!-- Información de contacto -->
               <div class="col-md-4 footer-section">
                   <h3>Información de Contacto</h3>
-                  <p>Dirección: San Salvador, San Salvador</p>
-                  <p>Teléfono: +503 7777-7777</p>
-                  <p>Correo Electrónico: ecomedic@gmail.com</p>
+                  <p>Dirección: Diagonal Dr. Luis Edmundo Vásquez, pasaje 1, Colonia Médica. Segunda planta arriba de Farmacia San Nicolas, a un costado de Starbucks, San Salvador, El Salvador</p>
+                  <p>Teléfono: +503 7718 3978</p>
+                  <p>Correo Electrónico: clinicaecomedi@gmail.com</p>
                   <p>Agenda tu cita dándo click aquí</p>
                   <!-- Redes sociales -->
                   <br>
                   <div class="social-links">
                     <h3>¡Síguenos en nuestras redes sociales!</h3>
-                      <a href="#" target="_blank"><i class="fab fa-facebook-f"><ion-icon name="logo-facebook"></ion-icon></i></a>
+                      <a href="https://www.facebook.com/ecomedi.sv/" target="_blank"><i class="fab fa-facebook-f"><ion-icon name="logo-facebook"></ion-icon></i></a>
                       <a href="#" target="_blank"><i class="fab fa-twitter"><ion-icon name="logo-twitter"></ion-icon></i></a>
                       <a href="#" target="_blank"><i class="fab fa-youtube-in"><ion-icon name="logo-youtube"></ion-icon></i></a>
-                      <a href="#" target="_blank"><i class="fab fa-instagram"><ion-icon name="logo-instagram"></ion-icon></i></a>
+                      <a href="https://www.instagram.com/ecomedi.sv/" target="_blank"><i class="fab fa-instagram"><ion-icon name="logo-instagram"></ion-icon></i></a>
                   </div>
               </div>
 
@@ -408,6 +585,19 @@
     <!--SCRIPT DE ICONOS DE REDES SOCIALES NO TOCAR-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+        <!--SCRIPT DE ICONOS DE TESTIMONIOS NO TOCAR-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></script>
+    <!--SCRIPT DE SERVICIOS NO TOCAR-->
+    <script src="JavaScript/jquery.min.js"></script>
+    <script src="JavaScript/owl.carousel.min.js"></script>
+    <script src="JavaScript/images-loded.min.js"></script>	
+    <script src="JavaScript/custom.js"></script>
+
+
+
 
   </body>
 </html>
